@@ -135,16 +135,9 @@ VPR_PATH([0.32.0], [VPR_SUBSYSTEM=`$VPR_CONFIG --subsystem`],
 # find and append GMTL flags...
 snx_save_CPPFLAGS="$CPPFLAGS"
 CPPFLAGS="$CPPFLAGS $STDFLAGS"
-GMTL_PATH(0.1.9, [$JUGGLERROOT_ABS/external/GMTL],
-          [$JUGGLERROOT_ABS/external/GMTL], ,
+GMTL_PATH(0.1.9, [/usr/local], , ,
           [AC_MSG_ERROR([*** GMTL required for Sonix ***])])
 CPPFLAGS="$snx_save_CPPFLAGS"
-
-if test "x$GMTL_ROOT" != "x$JUGGLERROOT_ABS/external/GMTL" ; then
-   LOCAL_GMTL='Y'
-else
-   LOCAL_GMTL='N'
-fi
 
 DPP_CHECK_DYNLOAD_LIB
 DPP_HAVE_CPPUNIT([1.9.10])
@@ -170,16 +163,12 @@ DPP_INSTALLER(vrjuggler, 0644, 0755, 0755)
 CXXFLAGS="$CXXFLAGS $VPR_CXXFLAGS_MIN $GMTL_INCLUDES"
 BASE_APP_LINK_FLAGS="$STDFLAGS $BASE_APP_LINK_FLAGS"
 DEPEND_FLAGS="$VPR_INCLUDES_MIN $GMTL_INCLUDES"
-snx_cxxflags="$STDFLAGS"
+snx_cxxflags="$STDFLAGS $GMTL_INCLUDES"
 
 # List the scripts sonix-config will call to get flags.  This should be in the
 # order used for linking.  That means the dependencies are satisfied right to
 # left.
 snx_dep_scripts="vpr-config"
-
-if test "x$LOCAL_GMTL" = "xY" ; then
-   snx_cxxflags="$snx_cxxflags $GMTL_INCLUDES"
-fi
 
 if test "x$PLATFORM" = "xIRIX" -a "x$USE_GCC" != "xyes" ; then
 #   CFLAGS="$CFLAGS -woff 1685,515,608,658,799,803,852,1048,1233,1499"
